Uses faster predicates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,15 @@
 cmake_minimum_required(VERSION 3.10)
 
+# Set the target architecture.
+# All modern x86/x64 processors support AVX2.
+# Older x86/x64 processors may support SSE2 but not AVX2.
+# Very old x86/x64 processors, or non x86/x64 
+# processors, do not support any of the two.
+set(ENABLE_SSE2 True)
+set(ENABLE_AVX2 True)
+
+#####################
+
 # use gcc and g++ instead of clang
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 set(CMAKE_CXX_COMPILER "g++-10")
@@ -9,7 +19,7 @@ endif()
 project(mesh_generator)
 
 # specify the C++ standard
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 set (SOURCES
@@ -19,10 +29,7 @@ set (SOURCES
     src/extended_predicates.cpp
     src/BSP.cpp
     src/inOutPartition.cpp
-    Indirect_Predicates/implicit_point.cpp
-    Indirect_Predicates/numerics.cpp
-    Indirect_Predicates/predicates/hand_optimized_predicates.cpp
-    Indirect_Predicates/predicates/indirect_predicates.cpp
+    src/winMem.cpp
 )
 
 # add the executable
@@ -44,29 +51,36 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
 	target_compile_options(${TARGET} PUBLIC "/fp:strict")
 # use intrinsic functions
 	target_compile_options(${TARGET} PUBLIC "/Oi")
-# reserve enough stack size
-	target_link_options(${TARGET} PUBLIC "/STACK:8421376")
+# enable AVX2 instruction set
+	target_compile_options(${TARGET} PUBLIC "/arch:AVX2")
 # turn off annoying warnings
 	target_compile_options(${TARGET} PUBLIC "/D _CRT_SECURE_NO_WARNINGS")
-elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+	# set target architecture
+	if(ENABLE_AVX2)
+		target_compile_options(${PROJECT_NAME} PUBLIC "/arch:AVX2")
+	elseif(ENABLE_SSE2)
+		target_compile_options(${PROJECT_NAME} PUBLIC "/arch:SSE2")
+	endif()
+# reserve enough stack size
+	target_link_options(${TARGET} PUBLIC "/STACK:8421376")
+else()
 # set standard optimization level
 	target_compile_options(${TARGET} PUBLIC -O2)
 # grant IEEE 754 compliance
 	target_compile_options(${TARGET} PUBLIC -frounding-math)
 # reserve enough stack size	
 	target_compile_options(${TARGET} PUBLIC -Wl,-z,stacksize=8421376)
-elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-#Disable all optimizations
-	target_compile_options(${TARGET} PUBLIC -O0)
-# reserve enough stack size	
-	target_compile_options(${TARGET} PUBLIC -Wl,-z,stacksize=8421376)
+	# set target architecture
+	if(ENABLE_AVX2)
+		target_compile_options(${PROJECT_NAME} PUBLIC "-mavx2")
+	elseif(ENABLE_SSE2)
+		target_compile_options(${PROJECT_NAME} PUBLIC "-msse2")
+	endif()
 endif()
 
 # Public include directory
 target_include_directories(${TARGET} PUBLIC
 	src
-	Indirect_Predicates
-	Indirect_Predicates/predicates
 )
 endforeach(TARGET)
 
